--- a/app/pages/vdrive/vdrive.html
+++ b/app/pages/vdrive/vdrive.html
@@ -5,16 +5,41 @@
 <GridLayout  exampleTitle toggleNavButton>
 <!-- >> basic-tab-view-html -->
     <TabView #tabview [selectedIndex]="tabindex" class="example-container">
-        <StackLayout *tabItem="{title: 'NativeScript'}">
-            <Label text="NativeScript" width="40%" color="blue" marginTop="20" fontSize="20" verticalAlignment="center" textAlignment="center"></Label>
+        <StackLayout *tabItem="{title: 'Home'}">
+            <Label text="Welcome to V-Drive" width="50%" color="blue" marginTop="20" fontSize="20" verticalAlignment="center" textAlignment="center"></Label>
 
             <ScrollView>
-                <TextView color="#4d4d4d" text='NativeScript is a free and open source framework for building native iOS and Android apps using JavaScript and CSS. NativeScript renders UIs with the native platform’s rendering engine—no WebViews—resulting in native-like performance and UX.
-    NativeScript provides a best-of-both-worlds development experience. Our cross-platform JavaScript modules give you the convenience of writing iOS and Android apps from a single JavaScript codebase, while our runtimes give you the power of accessing native APIs, SDKs, and frameworks when you need them—all without needing to open Xcode or Android Studio. NativeScript was created and is supported by Telerik.\n\n\n NativeScript doesn’t require Angular, but it’s even better when you use it. You can fully reuse skills and code from the web to build beautiful, high performance native mobile apps without web views. NativeScript features deep integration with Angular 2, the latest and greatest (and fastest) Angular framework. Open source and backed by Telerik.'
+                <TextView color="#4d4d4d" text='Now you can book you drive and drive away with your own car any time anywere in Bangalore'
                     editable="false" margin="10" height="500"></TextView>
             </ScrollView>
         </StackLayout>
-        <StackLayout *tabItem="{title: 'Icon'}">
+        <StackLayout *tabItem="{title: 'Booking'}">
+            <Label text="BOOK YOUR DRIVER" width="50%" color="blue" marginTop="20" fontSize="20" verticalAlignment="center" textAlignment="center"></Label>
+            <TextField #pickupvenue hint="Pickup Venue" ></TextField>
+            <TextField #pickuplocation hint="Pickup Location" ></TextField>
+    <StackLayout orientation="horizontal">
+            <Image
+      [src]="checked ? 'res://selected' : 'res://unchecked'"
+      class="checkbox"
+      dock="left"
+      width="20" height="20"
+      align = "right"></Image>
+
+       <Label text="I agree to accept the term and conditions" android:class="label-item"></Label>
+       </StackLayout>
+            <Button text="REQUEST FOR BOOKING" class="submit-button" ></Button>
+
+        </StackLayout>
+        <StackLayout *tabItem="{title: 'Booking List'}" >
+            <ListView [items]="dataItems" (setupItemView)="onSetupItemView($event)" rowHeight="44">
+            <template let-dataitem="item" let-i="index" let-third="third" let-header="header" let-footer="footer">
+                <GridLayout [class.third]="third" [class.header]="header" [class.footer]="footer" class="item" height="44" ios:padding="15" >
+                    <Label [text]="dataitem.name" android:class="label-item"></Label>
+                </GridLayout>
+            </template>
+        </ListView>
+    </StackLayout>
+    <StackLayout *tabItem="{title: 'Contact Us'}">
             <Image marginTop="20px" marginBottom="10" src="res://icon" horizontalAlignment="center" width="80" height="80"></Image>
             <Label color="blue" fontSize="20" text="NativeScript" textWrap="true" horizontalAlignment="center"></Label>
         </StackLayout>
