--- a/app/pages/vdrive/vdrive.html
+++ b/app/pages/vdrive/vdrive.html
@@ -1,6 +1,6 @@
 <ActionBar title="Customer Name">
   <NavigationButton text="Go Back" android.systemIcon="ic_menu_back" (tap)="goBack()"></NavigationButton>
-  <ActionItem ios.systemIcon="2" android.systemIcon="ic_menu_edit" ios.position="right" (tap)="logoff()"></ActionItem>
+  <ActionItem ios.systemIcon="2" android.systemIcon="ic_menu_moreoverflow" ios.position="right" (tap)="logoff()"></ActionItem>
 </ActionBar>
 
 <GridLayout  exampleTitle toggleNavButton>
