--- a/app/pages/login/login.html
+++ b/app/pages/login/login.html
@@ -4,6 +4,10 @@
   <TextField #email hint="Email Address" keyboardType="email" [(ngModel)]="user.email"
     autocorrect="false" autocapitalizationType="none"></TextField>
   <TextField #password hint="Password" secure="true" [(ngModel)]="user.password"></TextField>
+<TextField #name hint="Name" keyboardType="name" [(ngModel)]="user.name"
+    autocorrect="false" autocapitalizationType="none"></TextField>
+    <TextField #phone hint="Phone" keyboardType="phone" [(ngModel)]="user.phone"
+    autocorrect="false" autocapitalizationType="none"></TextField>
 
   <Button [text]="isLoggingIn ? 'Sign in' : 'Sign up'" class="submit-button" (tap)="submit()"></Button>
   <Button [text]="isLoggingIn ? 'Sign up' : 'Back to login'" (tap)="toggleDisplay()"></Button>
